--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ url                      : "https://hanamhic.github.io" # the base hostname & pr
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : "assets/images/hanamhic_logo.png"# path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -293,7 +293,6 @@ defaults:
       comments: # true
       share: true
       related: true
-
   # _pages
   - scope:
       path: "_pages"
@@ -301,7 +300,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      
+  # docs
   - scope:
       path: ""
       type: docs
