--- a/_config.yml
+++ b/_config.yml
@@ -158,6 +158,8 @@ footer:
 include:
   - .htaccess
   - _pages
+  - _docs
+  - _intro
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
@@ -182,7 +184,7 @@ exclude:
   - Rakefile
   - README
   - tmp
-  - /docs # ignore Minimal Mistakes /docs
+#  - /docs # ignore Minimal Mistakes /docs
   - /test # ignore Minimal Mistakes /test
 keep_files:
   - .git
@@ -300,7 +302,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-  # docs
+  # _docs
   - scope:
       path: ""
       type: docs
@@ -312,3 +314,23 @@ defaults:
       comments: false
       sidebar:
         nav: "docs"
+  # _intro
+  - scope:
+      path: ""
+      type: intro
+    values:
+      layout: single
+      read_time: false
+      author_profile: false
+      share: false
+      comments: false
+      sidebar:
+        nav: "intro"
+        
+collections:
+  docs:
+    output: true
+    permalink: /:collection/:path/
+  intro:
+    output: true
+    permalink: /:collection/:path/
