--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
   - title: "회사 소개"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+    url: /intro/hello/
   - title: "사업 소개"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "사업부 소개"
@@ -11,18 +11,19 @@ main:
   - title: "Contact"
     url: /contact/
     
-#만들어는 놓는데, 네비게이션 쓰는 것 보다 [제목 자동 정리하는 기능] 들어간 페이지 넣는게 나을 듯
+# intro links
 intro:
   - title: "CEO 인사말"
-    url: 
+    url: /intro/hello/
   - title: "경영이념 및 목표"
-    url: 
+    url: /intro/hi/
   - title: "회사 개요"
-    url: 
-  - title: "CEO 인사말"
-    url: 
-  - title: "CEO 인사말"
-    url: 
+    url: /intro/hello/
+  - title: "회사연혁"
+    url: /intro/hello/
+  - title: "조직도 및 부서소개"
+    url: /intro/hello/
+
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
