--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,29 +1,69 @@
 # main links
 main:
   - title: "회사 소개"
-    url: /intro/hello/
+    description: "About Hanam Heavy Industry..."
+    url: /about/CEO_greeting/
   - title: "사업 소개"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+    url: /business/materials/
   - title: "사업부 소개"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  - title: "고객 지원"
-    url: /something/
+    url: /department/gwangju/
+  - title: "새 소식"
+    url: /posts/
   - title: "Contact"
     url: /contact/
     
-# intro links
-intro:
-  - title: "CEO 인사말"
-    url: /intro/hello/
-  - title: "경영이념 및 목표"
-    url: /intro/hi/
-  - title: "회사 개요"
-    url: /intro/hello/
-  - title: "회사연혁"
-    url: /intro/hello/
-  - title: "조직도 및 부서소개"
-    url: /intro/hello/
+# about links
+about:
+  - title: "회사 소개"
+    children:
+    - title: "CEO 인사말"
+      url: /about/CEO_greeting/
+    - title: "경영 이념"
+      url: /about/management_philosophy/
+    - title: "회사 개요"
+      url: /about/outline/
+    - title: "회사 연혁"
+      url: /about/history/
+    - title: "조직도 및 부서소개"
+      url: /about/organization/
+  - title: "사업 소개"
+    children:
+    - title: "원자재 사업"
+      url : /business/materials/
+    - title: "금형 가공 사업"
+      url: /business/mold/
+    - title: "LCD 챔버 가공 사업"
+      url: /business/chamber/
+    - title: "조선 플랜트 가공 사업"
+      url: /business/plant/
+  - title: "사업부 소개"
+    children:
+    - title: "광주 본사"
+      url : /department/gwangju/
+    - title: "울산 지사"
+      url: /department/ulsan/
 
+# business introduction links
+business:
+  - title: "사업 소개"
+    children:
+    - title: "원자재 판매 가공사업"
+      url : /business/materials/
+    - title: "금형가공사업"
+      url: /business/mold/
+    - title: "LCD 챔버 가공사업"
+      url: /business/chamber/
+    - title: "조선플랜트 가공사업"
+      url: /business/plant/
+
+# department introduction links
+department:
+  - title: "부서 소개"
+    children:
+    - title: "광주 본사"
+      url : /department/gwangju/
+    - title: "울산 지사"
+      url: /department/ulsan/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
