--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -36,6 +36,8 @@ about:
       url: /business/chamber/
     - title: "조선 플랜트 가공 사업"
       url: /business/plant/
+    - title: "그 외 다양한 산업기계 가공"
+      url: /business/metalwork/
   - title: "사업부 소개"
     children:
     - title: "광주 본사"
@@ -59,6 +61,8 @@ business:
       url: /business/chamber/
     - title: "ENGINE BLOCK 가공"
       url: /business/plant/
+    - title: "그 외 다양한 산업기계 가공"
+      url: /business/metalwork/
 
 # department introduction links
 department:
