--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -38,7 +38,7 @@ about:
       url: /business/plant/
     - title: "그 외 다양한 산업기계 가공"
       url: /business/metalwork/
-  - title: "사업부 소개"
+  - title: "사업부 및 설비 소개"
     children:
     - title: "광주 본사"
       url : /department/gwangju/
@@ -66,7 +66,7 @@ business:
 
 # department introduction links
 department:
-  - title: "부서 소개"
+  - title: "사업부 및 설비 소개"
     children:
     - title: "광주 본사"
       url : /department/gwangju/
