--- a/_config.yml
+++ b/_config.yml
@@ -304,7 +304,7 @@ defaults:
       share: false
       related: true
       sidebar:
-        nav: ""
+        nav: "main"
   # _pages
   - scope:
       path: "_pages"
