--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-m
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "assets/images/hanamhic_logo.png"# path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
-# breadcrumbs            : false # true, false (default)
+breadcrumbs              : false # true, false (default)
 words_per_minute         : 200
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
@@ -114,7 +114,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: mailto:ha9298@hanmail.net
+      # url: "mailto:ha9298@hanmail.net"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "http://hanamhic.com"
@@ -164,11 +164,11 @@ footer:
 include:
   - .htaccess
   - _pages
-  - _docs
   - _about
   - _business
   - _department
 exclude:
+  - _docs
   - "*.sublime-project"
   - "*.sublime-workspace"
   - vendor
@@ -229,8 +229,6 @@ sass:
 
 # Outputting
 permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
-paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
@@ -312,18 +310,6 @@ defaults:
     values:
       layout: single
       author_profile: #true
-  # _docs
-  - scope:
-      path: ""
-      type: docs
-    values:
-      layout: single
-      read_time: false
-      author_profile: false
-      share: false
-      comments: false
-      sidebar:
-        nav: "docs"
   # about
   - scope:
       path: ""
@@ -347,7 +333,7 @@ defaults:
       share: false
       comments: false
       sidebar:
-        nav: "about"
+        nav: "business"
   # department
   - scope:
       path: ""
@@ -359,7 +345,7 @@ defaults:
       share: false
       comments: false
       sidebar:
-        nav: "about"
+        nav: "department"
 collections:
   docs:
     output: true
