--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -27,6 +27,68 @@ about:
     - title: "조직도 및 부서소개"
       url: /about/organization/
   - title: "사업 소개"
+    url : /business/materials/
+  - title: "사업부 및 설비 소개"
+    url : /department/gwangju/
+  - title: "새 소식"
+    url: /posts/
+  - title: "Contact"
+    url: /contact/
+
+# business introduction links
+business:
+  - title: "회사 소개"
+    url: /about/CEO_greeting/
+  - title: "사업 소개"
+    children:
+    - title: "원자재 사업"
+      url : /business/materials/
+    - title: "금형 가공 사업"
+      url: /business/mold/
+    - title: "LCD 챔버 가공 사업"
+      url: /business/chamber/
+    - title: "조선 플랜트 가공 사업"
+      url: /business/plant/
+    - title: "그 외 다양한 산업기계 가공"
+      url: /business/metalwork/
+  - title: "사업부 및 설비 소개"
+    url : /department/gwangju/
+  - title: "새 소식"
+    url: /posts/
+  - title: "Contact"
+    url: /contact/
+
+# department introduction links
+department:
+  - title: "회사 소개"
+    url: /about/CEO_greeting/
+  - title: "사업 소개"
+    url : /business/materials/
+  - title: "사업부 및 설비 소개"
+    children:
+    - title: "광주 본사"
+      url : /department/gwangju/
+    - title: "울산 지사"
+      url: /department/ulsan/
+  - title: "새 소식"
+    url: /posts/
+  - title: "Contact"
+    url: /contact/
+
+all:
+  - title: "회사 소개"
+    children:
+    - title: "CEO 인사말"
+      url: /about/CEO_greeting/
+    - title: "경영 이념"
+      url: /about/management_philosophy/
+    - title: "회사 개요"
+      url: /about/outline/
+    - title: "회사 연혁"
+      url: /about/history/
+    - title: "조직도 및 부서소개"
+      url: /about/organization/
+  - title: "사업 소개"
     children:
     - title: "원자재 사업"
       url : /business/materials/
@@ -50,7 +112,7 @@ about:
     url: /contact/
 
 # business introduction links
-business:
+business_list:
   - title: "주요 사업 내용"
     children:
     - title: "원자재 절단, 가공 및 판매"
@@ -63,20 +125,3 @@ business:
       url: /business/plant/
     - title: "그 외 다양한 산업기계 가공"
       url: /business/metalwork/
-
-# department introduction links
-department:
-  - title: "사업부 및 설비 소개"
-    children:
-    - title: "광주 본사"
-      url : /department/gwangju/
-    - title: "울산 지사"
-      url: /department/ulsan/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
