--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Hanam heavy Industry"
 title_separator          : "-"
 name                     : "hanamhic"
 description              : "website of hanam heavy industry."
-url                      : "https://hanamhic.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://hanamhic.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -117,7 +117,7 @@ author:
       # url: "mailto:ha9298@hanmail.net"
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "http://hanamhic.com"
+      url: "https://hanamhic.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
