--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Hanam heavy Industry"
 title_separator          : "-"
 name                     : "hanamhic"
 description              : "website of hanam heavy industry."
-url                      : "https://hanamhic.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://hanamhic.co.kr" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -110,14 +110,14 @@ author:
   avatar           : "/assets/images/hanamhic_logo_korean.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "초대형 MC/CNC 명가"
   location         : "Gwangju/Ulsan, Korea, republic of"
-  email            : "ha9298@hanmail.net"
+  email            : "hn9298@hanmail.net"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: "mailto:ha9298@hanmail.net"
+      # url: "mailto:hn9298@hanmail.net"
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://hanamhic.com"
+      url: "https://hanamhic.co.kr"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
